--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* General sizing */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -20,6 +21,7 @@ header h1 {
     font-size: 48px;
 }
 
+/* title highliting SEO */
 header h1 .seo {
     color: #d9dcd6;
 }
@@ -50,6 +52,7 @@ p {
     font-size: 16px;
 }
 
+/* main picture styling */
 .hero {
     height: 800px;
     width: 100%;
@@ -69,6 +72,7 @@ p {
     margin-left: 25px;
 }
 
+/* assets have a 75% width */
 .content {
     width: 75%;
     display: inline-block;
@@ -97,6 +101,7 @@ p {
     text-align: center;
 }
 
+/* img acts as a block element */
 .benefit img {
     display: block;
     margin: 10px auto;
@@ -122,6 +127,7 @@ p {
     font-size: 36px;
 }
 
+/* text displayed in the center of the page */
 footer {
     padding: 30px;
     clear: both;
